# blacksheep-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  db_schema.ddl  docker-compose.yml  pyproject.toml  requests_test.py  ruff.toml
.github/workflows/: docker-image.yml  pre-commit.yml  test.yml
src/: main.py
src/api/: call_api.py  login.py  models.py  users.py
src/api/v1/: llm_api.py  login.py  models.py  user_model_usage.py  users.py
src/core/: authentication.py  config.py  database.py  di.py  utils.py
src/db/: database.py
src/db/models/: base.py  models.py  user_model_access.py  user_model_usage.py  users.py
src/models/: __init__.py  base.py  models.py  user_model_access.py  user_model_usage.py  users.py
src/repositories/: base.py  user_model_usage.py  users.py
src/schemas/v1/: llm_api.py  login.py  models.py  user_model_usage.py  users.py
src/services/: azure_openai.py  login.py  models.py  user_model_usage.py  users.py
tests/: conftest.py  test_health.py
